# open-terminal-orchestrator

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRD.md  README.md  SECURITY.md  TODO.md  docker-compose.yml  index.html  mkdocs.yml  package-lock.json  package.json  vite.config.ts
backend/: alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_sandbox_data_dir.py  0003_add_sandbox_pending_recreation.py  0004_add_sandbox_warming_started_at.py  0005_add_metric_snapshots.py  0006_add_admin_users.py
backend/app/: cli.py  compat.py  config.py  database.py  logging.py  main.py  metrics.py  middleware.py  models.py  schemas.py  telemetry.py
backend/app/routes/: auth.py  health.py  metrics_history.py  policies.py  proxy.py  sandboxes.py  system.py  users.py
backend/app/services/: admin_auth.py  alert_evaluator.py  audit_service.py  litellm_service.py  oidc.py  openshell_client.py  policy_engine.py  pool_manager.py  (+6 more)
backend/shellguard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/tests/: conftest.py  test_admin_auth.py  test_config.py  test_e2e_flow.py  test_integration_bulk_sandboxes.py  test_integration_metrics_history.py  test_integration_policies.py  test_integration_proxy.py  test_integration_sandboxes.py  test_integration_system.py  test_integration_users.py  test_integration_webhooks.py  test_metrics.py  test_openshell_client.py  test_policy_engine.py  test_pool_manager.py  test_sandbox_resolver.py  test_syslog_service.py  test_webhook_service.py
(+100 files in other folders)
