[project]
name = "shellguard"
version = "0.1.0"
description = "Secure terminal orchestration for Open WebUI via OpenShell sandboxes"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30,<1.0",
    "pydantic-settings>=2.6,<3.0",
    "python-json-logger>=3.0,<4.0",
    "httpx>=0.27,<1.0",
    "pyyaml>=6.0,<7.0",
    "prometheus-client>=0.21,<1.0",
    "authlib>=1.3,<2.0",
    "alembic>=1.13,<2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
]

[project.scripts]
shellguard = "app.main:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
